# EB_tgbot

./: .gitmodules  README.md
src/: .gitignore  CMakeLists.txt  Config.hpp  CoordsData.hpp  LegendWords.cpp  LegendWords.hpp  main.cpp  main.hpp  snippets.hpp
